<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.ui.primerinicio.PrimerInicioSesion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPrimerInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primer_inicio"
                android:textSize="@dimen/tam_25"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_below="@+id/tvPrimerInicio"
                android:id="@+id/hlSintomas1"/>
            <TextView
                android:id="@+id/labelUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/etUsuarioPrimerInicio"
                android:text="@string/username"
                android:layout_below="@+id/hlSintomas1"/>
            <EditText
                android:id="@+id/etUsuarioPrimerInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelUsuario"
                android:textSize="@dimen/tam_20"/>

            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/evEmailPrimerInicio"
                android:text="@string/email"
                android:layout_below="@+id/etUsuarioPrimerInicio"/>
            <EditText
                android:id="@+id/etEmailPrimerInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelEmail"
                android:textSize="@dimen/tam_20"/>

            <TextView
                android:id="@+id/labelNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/etEmailPrimerInicio"
                android:text="@string/nombre"
                android:layout_below="@+id/etEmailPrimerInicio"/>
            <EditText
                android:id="@+id/etNombrePrimerInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelNombre"
                android:textSize="@dimen/tam_20"/>
            <TextView
                android:id="@+id/labelApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/etApellidoPrimerInicio"
                android:text="@string/apellido"
                android:layout_below="@+id/etNombrePrimerInicio"/>
            <EditText
                android:id="@+id/etApellidoPrimerInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelApellido"
                android:textSize="@dimen/tam_20"/>

            <TextView
                android:id="@+id/labelCedula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/evCedulaPrimerInicio"
                android:text="@string/cedula"
                android:layout_below="@+id/etApellidoPrimerInicio"/>
            <EditText
                android:id="@+id/etCedulaPrimerInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelCedula"
                android:textSize="@dimen/tam_20"/>

            <TextView
                android:id="@+id/labelTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/etTelefonoPrimerInicio"
                android:text="@string/telefono"
                android:layout_below="@+id/etCedulaPrimerInicio"/>
            <EditText
                android:id="@+id/etTelefonoPrimerInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelTelefono"
                android:textSize="@dimen/tam_20"/>

            <TextView
                android:id="@+id/labelNacionalidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/spinnerNacionalidadPrimerInicio"
                android:text="@string/nacionalidad"
                android:layout_below="@+id/etTelefonoPrimerInicio"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelNacionalidad"
                android:id="@+id/spinnerNacionalidadPrimerInicio"/>

            <TextView
                android:id="@+id/labelFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/tvFechaNacimientoPrimerInicio"
                android:text="@string/fecha_nacimiento"
                android:layout_below="@+id/spinnerNacionalidadPrimerInicio"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelFechaNacimiento"
                android:id="@+id/tvFechaNacimientoPrimerInicio"
                android:text="@string/fecha_nacimiento"
                android:textSize="@dimen/tam_20"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/labelDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/etDireccionPrimerInicio"
                android:text="@string/direccion"
                android:layout_below="@+id/tvFechaNacimientoPrimerInicio"/>
            <EditText
                android:id="@+id/etDireccionPrimerInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelDireccion"
                android:textSize="@dimen/tam_20"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_below="@+id/etDireccionPrimerInicio"
                android:id="@+id/hlSintomas2"/>
            <Button
                android:id="@+id/btnConfirmarPirmerInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hlSintomas2"
                android:text="@string/confirmar"/>
        </RelativeLayout>

    </LinearLayout>


</ScrollView>